# desc_media

./: README.md  pyproject.toml  ruff.toml
src/desc_media/: __init__.py  cli.py  ffmpeg.py  process.py  utils.py
