[project]
name = "desc-media"
version = "0.1.0"
description = "A Python CLI tool that uses a local LLAMA model to describe media."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "av>=14.3.0",
    "click>=8.1.8",
    "coloredlogs>=15.0.1",
    "filetype>=1.2.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "ollama>=0.4.8",
    "pillow>=11.2.1",
    "ruff>=0.11.7",
    "tqdm>=4.67.1",
    "verboselogs>=1.7",
]

[project.scripts]
descmedia = "desc_media.cli:main"

[tool.uv]
dev-dependencies = []
package = true
compile-bytecode = true

[tool.uv.sources]
src = { path = "src" }

[tool.ruff]
extend = "ruff.toml"

[tool.basedpyright]
reportUnusedCallResult = false
reportInvalidCast = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportRedeclaration = false
